fixing the ios iframe stretching

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -262,6 +262,15 @@ img.border {
   border: 1px #8585AD solid;
 }
 
+div.scroll_frame_480 {
+  text-align: center;
+  overflow: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling:touch;
+  width: 100%;
+  height: 100%;
+}
+
 iframe {
   border: 1px #8585AD solid;
 }
